# Ocean-s-Edge

./: CMakeLists.txt  vcpkg.json
Resources/OEResources/shaders/glsl4/: bloom_layer.glsl  chunk_shader.glsl  fog_box.glsl  fog_calc.glsl  fogged_skybox.glsl  ssao_layer.glsl  utils.glsl
Sources/: AmbientPlayer.cpp  AmbientPlayer.h  Atlas.h  AtlasPointMeta.h  BatchesManager.cpp  BatchesManager.h  BlockData.h  BlockMeta.h  BlockTypeMeta.h  BlocksTypes.h  CMakeLists.txt  Chunk.cpp  Chunk.h  ChunksManager.cpp  ChunksManager.h  Defines.h  GameGlobals.h  GameMain.cpp  GameMain.h  OEPhysicalEntity.h  PhysicalChunk.cpp  PhysicalChunk.h  Player.h  PlayerController.cpp  PlayerController.h  Resources.h  World.cpp  World.h  WorldChunksUpdater.cpp  WorldChunksUpdater.h
Sources/Player/: LocalPlayer.h
Sources/Skybox/: DayNightCycleSystem.cpp  DayNightCycleSystem.h
Sources/SungearCandidates/: EntitiesPool.cpp  EntitiesPool.h
Sources/Systems/: DayNightCycleSystem.cpp  DayNightCycleSystem.h
